Adicionado o componente pesquisa, feito os cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,3 @@
-<body>
-  <header>
-    <nav class="nav_container">
-      <img src="/src/assets/img/gestor-de-projeto.png" alt="Logo Gestor">
-      <ul class="lista_container">
-        <li class="lista_item">
-          <a href="#">Pesquisa</a>
-        </li>
-        <li class="lista_item">
-          <a href="#">Cadastro</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section class="pesquisa">
-      <div class="pesquisa_container">
-        <input type="text" id="busca" placeholder="Pesquisar...">
-        <button>Buscar</button>
-      </div>
-    </section>
-
-    <section class="card">
-      <div>
-        <img src="" alt="Foto do Usuario">
-      </div>
-    </section>
-  </main>
-  <footer>
-    <span>&copy;Todos os direitos reservados</span>
-  </footer>
-</body>
+<app-pesquisa></app-pesquisa>
 
 
