Adicionado o type nos botoes

--- a/src/app/pesquisa/pesquisa.component.html
+++ b/src/app/pesquisa/pesquisa.component.html
@@ -27,7 +27,7 @@
           <h5 class="card__informacoes_cargo">Cargo</h5>
           <P class="card__informacoes_desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</P>
           <div class="card__botoes">
-            <button class="card__btn">Download</button>
+            <button class="card__btn" type="submit">Download</button>
             <img src="/src/assets/img/whatsapp.png" alt="Whatsapp">
             <img src="/src/assets/img/o-email.png" alt="Email">
             <img src="/src/assets/img/github.png" alt="GitHub">
@@ -43,7 +43,7 @@
           <h5 class="card__informacoes_cargo">Cargo</h5>
           <P class="card__informacoes_desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</P>
           <div class="card__botoes">
-            <button class="card__btn">Download</button>
+            <button class="card__btn" type="submit">Download</button>
             <img src="/src/assets/img/whatsapp.png" alt="Whatsapp">
             <img src="/src/assets/img/o-email.png" alt="Email">
             <img src="/src/assets/img/github.png" alt="GitHub">
@@ -59,7 +59,7 @@
           <h5 class="card__informacoes_cargo">Cargo</h5>
           <P class="card__informacoes_desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</P>
           <div class="card__botoes">
-            <button class="card__btn">Download</button>
+            <button class="card__btn" type="submit">Download</button>
             <img src="/src/assets/img/whatsapp.png" alt="Whatsapp">
             <img src="/src/assets/img/o-email.png" alt="Email">
             <img src="/src/assets/img/github.png" alt="GitHub">
@@ -74,7 +74,7 @@
           <h5 class="card__informacoes_cargo">Cargo</h5>
           <P class="card__informacoes_desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</P>
           <div class="card__botoes">
-            <button class="card__btn">Download</button>
+            <button class="card__btn" type="submit">Download</button>
             <img src="/src/assets/img/whatsapp.png" alt="Whatsapp">
             <img src="/src/assets/img/o-email.png" alt="Email">
             <img src="/src/assets/img/github.png" alt="GitHub">
