Ajustando Components - Header e Footer

--- a/src/app/components/pesquisa/pesquisa.component.html
+++ b/src/app/components/pesquisa/pesquisa.component.html
@@ -1,20 +1,7 @@
 <body>
-  <header>
-      <nav class="nav_container">
-        <img src="/src/assets/img/gestor-de-projeto.png" alt="Logo Gestor">
-        <ul class="lista_container">
-          <li class="lista_item">
-            <a href="#" class="lista_link">Pesquisa</a>
-          </li>
-          <li class="lista_item">
-            <a href="#" class="lista_link">Cadastro</a>
-          </li>
-        </ul>
-      </nav>
-  </header>
   <main>
     <section class="pesquisa">
-      <div class="pesquisa_container">
+      <div class="pesquisa__container">
         <input type="text" id="busca" placeholder="Pesquisar...">
       </div>
     </section>
@@ -28,10 +15,10 @@
           <P class="card__informacoes_desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</P>
           <div class="card__botoes">
             <button class="card__btn" type="submit">Download</button>
-            <img src="/src/assets/img/whatsapp.png" alt="Whatsapp">
-            <img src="/src/assets/img/o-email.png" alt="Email">
-            <img src="/src/assets/img/github.png" alt="GitHub">
-            <img src="/src/assets/img/linkedin.png" alt="Linkedin">
+            <img src="/assets/img/whatsapp.png" alt="Whatsapp" class="card__img">
+            <img src="/assets/img/o-email.png" alt="Email" class="card__img">
+            <img src="/assets/img/github.png" alt="GitHub" class="card__img">
+            <img src="/assets/img/linkedin.png" alt="Linkedin" class="card__img">
           </div>
         </div>
       </div>
@@ -44,10 +31,10 @@
           <P class="card__informacoes_desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</P>
           <div class="card__botoes">
             <button class="card__btn" type="submit">Download</button>
-            <img src="/src/assets/img/whatsapp.png" alt="Whatsapp">
-            <img src="/src/assets/img/o-email.png" alt="Email">
-            <img src="/src/assets/img/github.png" alt="GitHub">
-            <img src="/src/assets/img/linkedin.png" alt="Linkedin">
+            <img src="/assets/img/whatsapp.png" alt="Whatsapp" class="card__img">
+            <img src="/assets/img/o-email.png" alt="Email" class="card__img">
+            <img src="/assets/img/github.png" alt="GitHub" class="card__img">
+            <img src="/assets/img/linkedin.png" alt="Linkedin" class="card__img">
           </div>
         </div>
       </div>
@@ -60,10 +47,10 @@
           <P class="card__informacoes_desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</P>
           <div class="card__botoes">
             <button class="card__btn" type="submit">Download</button>
-            <img src="/src/assets/img/whatsapp.png" alt="Whatsapp">
-            <img src="/src/assets/img/o-email.png" alt="Email">
-            <img src="/src/assets/img/github.png" alt="GitHub">
-            <img src="/src/assets/img/linkedin.png" alt="Linkedin">
+            <img src="/assets/img/whatsapp.png" alt="Whatsapp" class="card__img">
+            <img src="/assets/img/o-email.png" alt="Email"class="card__img">
+            <img src="/assets/img/github.png" alt="GitHub"class="card__img">
+            <img src="/assets/img/linkedin.png" alt="Linkedin" class="card__img">
           </div>
         </div>
       </div>
@@ -75,19 +62,13 @@
           <P class="card__informacoes_desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</P>
           <div class="card__botoes">
             <button class="card__btn" type="submit">Download</button>
-            <img src="/src/assets/img/whatsapp.png" alt="Whatsapp">
-            <img src="/src/assets/img/o-email.png" alt="Email">
-            <img src="/src/assets/img/github.png" alt="GitHub">
-            <img src="/src/assets/img/linkedin.png" alt="Linkedin">
+            <img src="/assets/img/whatsapp.png" alt="Whatsapp" class="card__img">
+            <img src="/assets/img/o-email.png" alt="Email" class="card__img">
+            <img src="/assets/img/github.png" alt="GitHub" class="card__img">
+            <img src="/assets/img/linkedin.png" alt="Linkedin" class="card__img">
           </div>
         </div>
       </div>
     </section>
   </main>
-
-
-
-  <footer>
-    <span>&copy;Todos os direitos reservados</span>
-  </footer>
 </body>
