--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,10 @@
-*{
-  margin: 0;
-  padding: 0;
+div {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  display: flex;
+  flex-grow: 1;
 }
