--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-pesquisa></app-pesquisa>
-
-
+<div>
+  <app-header></app-header>
+  <main>
+    <app-pesquisa></app-pesquisa>
+  </main>
+  <app-footer></app-footer>
+</div>
