--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
-*{
-  margin: 0;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&family=Poppins:wght@300;400;500;700&display=swap");
+
+* {
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
+  font-family: Poppins, 'sans serif';
 }
