--- a/src/styles.css
+++ b/src/styles.css
@@ -4,5 +4,18 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Poppins, 'sans serif';
+  font-family: Poppins, "sans serif";
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background: #bfbef9;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #3554f9;
+  border-radius: 10px;
 }
