Ajustando Scrollbar, Route e tela de Cadastro

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,10 +7,10 @@
     />
     <ul class="lista__container">
       <li class="lista__item">
-        <a href="#" class="lista__link">Pesquisa</a>
+        <a routerLink="/pesquisa" class="lista__link">Pesquisa</a>
       </li>
       <li class="lista__item">
-        <a href="#" class="lista__link">Cadastro</a>
+        <a routerLink="/cadastro" class="lista__link">Cadastro</a>
       </li>
     </ul>
   </nav>
