--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
   <app-header></app-header>
   <main>
-    <app-pesquisa></app-pesquisa>
+    <router-outlet></router-outlet>
   </main>
   <app-footer></app-footer>
 </div>
