Ajustando Header, Navbar, Icones

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,10 @@
-div {
+.component {
   height: 100vh;
   display: flex;
   flex-direction: column;
 }
 
-main {
+.component__main {
   display: flex;
   flex-grow: 1;
 }
