--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div>
+<div class="component">
   <app-header></app-header>
-  <main>
+  <main class="component__main">
     <router-outlet></router-outlet>
   </main>
   <app-footer></app-footer>
