--- a/src/app/pages/pesquisa/pesquisa.component.html
+++ b/src/app/pages/pesquisa/pesquisa.component.html
@@ -1,5 +1,5 @@
 <body>
-  <main>
+  <!-- <main>
     <section class="pesquisa">
       <div class="pesquisa__container">
         <input type="text" id="busca" placeholder="Pesquisar...">
@@ -70,5 +70,5 @@
         </div>
       </div>
     </section>
-  </main>
+  </main> -->
 </body>
