--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,37 +1,61 @@
-header {
-  width: 100%;
-  margin: 0 auto;
-  background-color: #bfbef9;
+.navbar {
+  background: #bfbef9;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10%;
 }
 
-.nav__container {
+.navbar > ul {
   display: flex;
-  justify-content: space-between;
+  list-style: none;
   align-items: center;
-  width: 90%;
-  height: 68px;
-  margin: 0 auto;
+}
+
+.navbar ul li {
+  margin: 0 10px;
+  font-weight: 500;
+  font-size: 16px;
+  padding: 6px 0;
+  position: relative;
+}
+
+.item {
+  text-decoration: none;
+  color: #111;
+}
+
+.navbar li a::before {
+  content: "";
+  position: absolute;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  background: blue;
+  transition: all 0.4s ease;
+}
+
+.navbar ul li a::before {
+  width: 100%;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.4s ease;
+}
+
+.navbar ul li a:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
 }
 
 .img__logo {
-  width: 80px;
-  height: auto;
+  height: 5.5rem;
 }
 
-.lista__container {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+.moon {
+  height: 10px;
 }
 
-.lista__item {
-  list-style: none;
-  margin-left: 21px;
-}
-.lista__link {
-  text-decoration: none;
-  color: black;
-}
-.lista__link:hover {
-  color: #fff;
+.cursor {
+  cursor: pointer;
 }
