--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,11 +5,11 @@
     alt="Logo Gestor"
     class="img__logo"
   />
-  <ul>
-    <li>
+  <ul class="lista">
+    <li class="lista__itens">
       <a class="item" routerLink="/pesquisa">Home</a>
     </li>
-    <li>
+    <li class="lista__itens">
       <a class="item" routerLink="/cadastro">Cadastrar</a>
     </li>
   </ul>
