--- a/src/app/pages/pesquisa/pesquisa.component.html
+++ b/src/app/pages/pesquisa/pesquisa.component.html
@@ -1,74 +1,32 @@
 <body>
-  <!-- <main>
-    <section class="pesquisa">
-      <div class="pesquisa__container">
-        <input type="text" id="busca" placeholder="Pesquisar...">
-      </div>
-    </section>
-
-    <section class="card">
-      <div class="card__layout">
-        <img src="" alt="Foto Usuario">
-        <div class="card__informacoes">
-          <h4 class="card__informacoes_nome">Nome do Usuario</h4>
-          <h5 class="card__informacoes_cargo">Cargo</h5>
-          <P class="card__informacoes_desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</P>
-          <div class="card__botoes">
-            <button class="card__btn" type="submit">Download</button>
-            <img src="/assets/img/whatsapp.png" alt="Whatsapp" class="card__img">
-            <img src="/assets/img/o-email.png" alt="Email" class="card__img">
-            <img src="/assets/img/github.png" alt="GitHub" class="card__img">
-            <img src="/assets/img/linkedin.png" alt="Linkedin" class="card__img">
+  <main>
+    <div class="slide__content">
+      <div class="card">
+        <div class="image__content">
+          <div class="card__image">
+            <img
+              src="../../../assets/img/gestor-de-projeto.png"
+              alt=""
+              class="card__img"
+            />
+          </div>
+        </div>
+        <div class="card__content">
+          <h2 class="name">Gabriel Michels</h2>
+          <h3 class="cargo">Trainee</h3>
+          <p class="description">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam hic
+            ipsa provident modi aliquam illum eum numquam cum odit, explicabo
+          </p>
+          <div class="informacoes">
+            <button class="article__btn">Currículo</button>
+            <i class="bx bx-envelope icone bx-md"></i>
+            <i class="bx bxl-whatsapp icone bx-md"></i>
+            <i class="bx bxl-linkedin icone bx-md"></i>
+            <i class="bx bxl-github icone bx-md"></i>
           </div>
         </div>
       </div>
-
-      <div class="card__layout">
-        <img src="" alt="Foto Usuario">
-        <div class="card__informacoes">
-          <h4 class="card__informacoes_nome">Nome do Usuario</h4>
-          <h5 class="card__informacoes_cargo">Cargo</h5>
-          <P class="card__informacoes_desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</P>
-          <div class="card__botoes">
-            <button class="card__btn" type="submit">Download</button>
-            <img src="/assets/img/whatsapp.png" alt="Whatsapp" class="card__img">
-            <img src="/assets/img/o-email.png" alt="Email" class="card__img">
-            <img src="/assets/img/github.png" alt="GitHub" class="card__img">
-            <img src="/assets/img/linkedin.png" alt="Linkedin" class="card__img">
-          </div>
-        </div>
-      </div>
-
-      <div class="card__layout">
-        <img src="" alt="Foto Usuario">
-        <div class="card__informacoes">
-          <h4 class="card__informacoes_nome">Nome do Usuario</h4>
-          <h5 class="card__informacoes_cargo">Cargo</h5>
-          <P class="card__informacoes_desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</P>
-          <div class="card__botoes">
-            <button class="card__btn" type="submit">Download</button>
-            <img src="/assets/img/whatsapp.png" alt="Whatsapp" class="card__img">
-            <img src="/assets/img/o-email.png" alt="Email"class="card__img">
-            <img src="/assets/img/github.png" alt="GitHub"class="card__img">
-            <img src="/assets/img/linkedin.png" alt="Linkedin" class="card__img">
-          </div>
-        </div>
-      </div>
-      <div class="card__layout">
-        <img src="" alt="Foto Usuario">
-        <div class="card__informacoes">
-          <h4 class="card__informacoes_nome">Nome do Usuario</h4>
-          <h5 class="card__informacoes_cargo">Cargo</h5>
-          <P class="card__informacoes_desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</P>
-          <div class="card__botoes">
-            <button class="card__btn" type="submit">Download</button>
-            <img src="/assets/img/whatsapp.png" alt="Whatsapp" class="card__img">
-            <img src="/assets/img/o-email.png" alt="Email" class="card__img">
-            <img src="/assets/img/github.png" alt="GitHub" class="card__img">
-            <img src="/assets/img/linkedin.png" alt="Linkedin" class="card__img">
-          </div>
-        </div>
-      </div>
-    </section>
-  </main> -->
+    </div>
+  </main>
 </body>
