Adicionado o campo de pesquisa. Falta refatorar

--- a/src/app/pages/pesquisa/pesquisa.component.html
+++ b/src/app/pages/pesquisa/pesquisa.component.html
@@ -1,6 +1,70 @@
 <body>
   <main>
+    <form action="" class="form__pesquisa">
+      <input
+        type="text"
+        placeholder="Pesquise..."
+        name="pesquisa"
+        class="form__input"
+      />
+      <button type="submit" class="form__botao">
+        <i class="bx bx-search bx-md icone__pesquisa"></i>
+      </button>
+    </form>
+
     <div class="slide__content">
+      <div class="card">
+        <div class="image__content">
+          <div class="card__image">
+            <img
+              src="../../../assets/img/gestor-de-projeto.png"
+              alt=""
+              class="card__img"
+            />
+          </div>
+        </div>
+        <div class="card__content">
+          <h2 class="name">Gabriel Michels</h2>
+          <h3 class="cargo">Trainee</h3>
+          <p class="description">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam hic
+            ipsa provident modi aliquam illum eum numquam cum odit, explicabo
+          </p>
+          <div class="informacoes">
+            <button class="article__btn">Currículo</button>
+            <i class="bx bx-envelope icone bx-md"></i>
+            <i class="bx bxl-whatsapp icone bx-md"></i>
+            <i class="bx bxl-linkedin icone bx-md"></i>
+            <i class="bx bxl-github icone bx-md"></i>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="image__content">
+          <div class="card__image">
+            <img
+              src="../../../assets/img/gestor-de-projeto.png"
+              alt=""
+              class="card__img"
+            />
+          </div>
+        </div>
+        <div class="card__content">
+          <h2 class="name">Gabriel Michels</h2>
+          <h3 class="cargo">Trainee</h3>
+          <p class="description">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam hic
+            ipsa provident modi aliquam illum eum numquam cum odit, explicabo
+          </p>
+          <div class="informacoes">
+            <button class="article__btn">Currículo</button>
+            <i class="bx bx-envelope icone bx-md"></i>
+            <i class="bx bxl-whatsapp icone bx-md"></i>
+            <i class="bx bxl-linkedin icone bx-md"></i>
+            <i class="bx bxl-github icone bx-md"></i>
+          </div>
+        </div>
+      </div>
       <div class="card">
         <div class="image__content">
           <div class="card__image">
