--- a/src/app/pages/pesquisa/pesquisa.component.css
+++ b/src/app/pages/pesquisa/pesquisa.component.css
@@ -2,6 +2,52 @@ body {
   min-height: 100vh;
   min-width: 87vw;
   display: flex;
+  justify-content: center;
+}
+
+.form__pesquisa {
+  margin: 80px 0;
+  width: 100%;
+  max-width: 700px;
+  height: 60px;
+  background: rgba(191, 190, 249, 0.7);
+  display: flex;
+  align-items: center;
+  border-radius: 50px;
+  padding: 10px 20px;
+  backdrop-filter: blur(4px) saturate(180%);
+}
+
+.form__input {
+  background: transparent;
+  flex: 1;
+  border: 0;
+  outline: none;
+  padding: 24px 20px;
+  font-size: 20px;
+  color: #fff;
+}
+
+::placeholder {
+  color: #fff;
+}
+
+.form__botao {
+  border: 0;
+  border-radius: 50%;
+  background: transparent;
+  cursor: pointer;
+}
+
+.icone__pesquisa {
+  color: #eee;
+  width: 25px;
+  transition: ease-in-out 0.1s;
+}
+
+.icone__pesquisa:hover {
+  color: #fff;
+  transform: scale(1.09);
 }
 
 .slide__content {
@@ -99,12 +145,12 @@ body {
   height: 30px;
   width: 30px;
   margin: 0 2px;
-  color: #EEE;
+  color: #eee;
   transition: ease-in-out 0.1s;
 }
 
 .icone:hover {
   transform: scale(1.08);
-  color: #FFF;
+  color: #fff;
   cursor: pointer;
 }
