Verificando versionamento do git. TESTE

--- a/src/app/pages/pesquisa/pesquisa.component.html
+++ b/src/app/pages/pesquisa/pesquisa.component.html
@@ -28,7 +28,7 @@
           <h3 class="cargo">Trainee</h3>
           <p class="description">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam hic
-            ipsa provident modi aliquam illum eum numquam cum odit, explicabo
+            ipsa provident modi aliquam illum eum numquam cum odit, explicabo.
           </p>
           <div class="informacoes">
             <button class="article__btn">Currículo</button>
