Refatoração e HTML semântico

--- a/src/app/pages/pesquisa/pesquisa.component.html
+++ b/src/app/pages/pesquisa/pesquisa.component.html
@@ -4,7 +4,7 @@
       <input
         type="text"
         placeholder="Pesquise..."
-        name="pesquisa"
+        nome="pesquisa"
         class="form__input"
       />
       <button type="submit" class="form__botao">
@@ -12,85 +12,43 @@
       </button>
     </form>
 
-    <div class="slide__content">
-      <div class="card">
-        <div class="image__content">
-          <div class="card__image">
+    <section class="conteudo__card">
+      <article class="card">
+        <aside class="conteudo__imagem">
+          <figure class="card__imagem">
             <img
-              src="../../../assets/img/gestor-de-projeto.png"
+              src="../../../assets/img/foto_exemplo.jpg"
               alt=""
               class="card__img"
             />
-          </div>
-        </div>
-        <div class="card__content">
-          <h2 class="name">Gabriel Michels</h2>
+          </figure>
+        </aside>
+        <div class="card__conteudo">
+          <h2 class="nome">Gabriel Michels</h2>
           <h3 class="cargo">Trainee</h3>
-          <p class="description">
+          <p class="descricao">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam hic
             ipsa provident modi aliquam illum eum numquam cum odit, explicabo.
           </p>
           <div class="informacoes">
             <button class="article__btn">Currículo</button>
-            <i class="bx bx-envelope icone bx-md"></i>
-            <i class="bx bxl-whatsapp icone bx-md"></i>
-            <i class="bx bxl-linkedin icone bx-md"></i>
-            <i class="bx bxl-github icone bx-md"></i>
+            <a href="mailto:gspindola@magnasistemas.com.br" target="_blank"
+              ><i class="bx bx-envelope icone bx-md"></i
+            ></a>
+            <a href="https://wa.me/5511983638764" target="_blank"
+              ><i class="bx bxl-whatsapp icone bx-md"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/gabrielmichels/"
+              target="_blank"
+              ><i class="bx bxl-linkedin icone bx-md"></i
+            ></a>
+            <a href="https://github.com/Michelsgab" target="_blank"
+              ><i class="bx bxl-github icone bx-md"></i
+            ></a>
           </div>
         </div>
-      </div>
-      <div class="card">
-        <div class="image__content">
-          <div class="card__image">
-            <img
-              src="../../../assets/img/gestor-de-projeto.png"
-              alt=""
-              class="card__img"
-            />
-          </div>
-        </div>
-        <div class="card__content">
-          <h2 class="name">Gabriel Michels</h2>
-          <h3 class="cargo">Trainee</h3>
-          <p class="description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam hic
-            ipsa provident modi aliquam illum eum numquam cum odit, explicabo.
-          </p>
-          <div class="informacoes">
-            <button class="article__btn">Currículo</button>
-            <i class="bx bx-envelope icone bx-md"></i>
-            <i class="bx bxl-whatsapp icone bx-md"></i>
-            <i class="bx bxl-linkedin icone bx-md"></i>
-            <i class="bx bxl-github icone bx-md"></i>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="image__content">
-          <div class="card__image">
-            <img
-              src="../../../assets/img/gestor-de-projeto.png"
-              alt=""
-              class="card__img"
-            />
-          </div>
-        </div>
-        <div class="card__content">
-          <h2 class="name">Gabriel Michels</h2>
-          <h3 class="cargo">Trainee</h3>
-          <p class="description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam hic
-            ipsa provident modi aliquam illum eum numquam cum odit, explicabo
-          </p>
-          <div class="informacoes">
-            <button class="article__btn">Currículo</button>
-            <i class="bx bx-envelope icone bx-md"></i>
-            <i class="bx bxl-whatsapp icone bx-md"></i>
-            <i class="bx bxl-linkedin icone bx-md"></i>
-            <i class="bx bxl-github icone bx-md"></i>
-          </div>
-        </div>
-      </div>
-    </div>
+      </article>
+    </section>
   </main>
 </body>
