--- a/src/app/pages/pesquisa/pesquisa.component.css
+++ b/src/app/pages/pesquisa/pesquisa.component.css
@@ -1,47 +1,47 @@
 body {
-  min-height: 100vh;
+  display: flex;
   min-width: 87vw;
-  display: flex;
+  min-height: 100vh;
   justify-content: center;
-}
-
-.form__pesquisa {
-  margin: 80px 0;
-  width: 100%;
-  max-width: 700px;
-  height: 60px;
-  background: rgba(191, 190, 249, 0.7);
-  display: flex;
-  align-items: center;
-  border-radius: 50px;
-  padding: 10px 20px;
-  backdrop-filter: blur(4px) saturate(180%);
-}
-
-.form__input {
-  background: transparent;
-  flex: 1;
-  border: 0;
-  outline: none;
-  padding: 24px 20px;
-  font-size: 20px;
-  color: #fff;
 }
 
 ::placeholder {
   color: #fff;
 }
 
+.form__pesquisa {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  margin: 80px 0;
+  max-width: 700px;
+  padding: 10px 20px;
+  border-radius: 50px;
+  align-items: center;
+  background: rgba(191, 190, 249, 0.7);
+  backdrop-filter: blur(4px) saturate(180%);
+}
+
+.form__input {
+  flex: 1;
+  border: 0;
+  outline: none;
+  color: #fff;
+  font-size: 20px;
+  padding: 24px 20px;
+  background: transparent;
+}
+
 .form__botao {
   border: 0;
+  cursor: pointer;
   border-radius: 50%;
   background: transparent;
-  cursor: pointer;
 }
 
 .icone__pesquisa {
-  color: #eee;
   width: 25px;
+  color: #eee;
   transition: ease-in-out 0.1s;
 }
 
@@ -50,69 +50,63 @@ body {
   transform: scale(1.09);
 }
 
-.slide__content {
+.conteudo__card {
   margin: 0 40px;
 }
 
 .card {
-  display: flex;
-  align-items: center;
   width: 580px;
   margin: 10px;
+  display: flex;
   border-radius: 20px;
+  align-items: center;
   background-color: #bfbef9;
 }
 
-.image__content,
-.card__content {
+.conteudo__imagem,
+.card__conteudo {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   padding: 10px 14px;
+  align-items: center;
+  flex-direction: column;
 }
 
-.image__content {
+.conteudo__imagem {
   row-gap: 5px;
 }
 
-.card__image {
-  position: relative;
-  height: 200px;
+.card__imagem {
   width: 200px;
-  border-radius: 5%;
-  background: #3554f9;
   padding: 3px;
+  height: 200px;
+  border-radius: 40%;
+  position: relative;
+  background: #ffffff;
 }
 
 .card__img {
   height: 100%;
   width: 100%;
   object-fit: cover;
-  border-radius: 5%;
-  border: 4px 0 solid #3554f9;
+  border-radius: 40%;
 }
 
-.name,
+.nome,
+.descricao,
 .cargo {
-  font-size: 18px;
-  font-weight: 500;
   color: #333;
-  background-color: #fff;
-  min-width: 300px;
-  text-align: center;
-  border-radius: 5px;
   margin: 4px 0;
+  font-size: 18px;
+  min-width: 300px;
+  font-weight: 500;
+  border-radius: 5px;
+  text-align: center;
+  background-color: #fff;
 }
 
-.description {
+.descricao {
   font-size: 14px;
-  color: #333;
-  text-align: center;
-  background-color: #fff;
   max-width: 300px;
-  text-align: center;
-  border-radius: 5px;
-  margin: 4px 0;
 }
 
 .informacoes {
@@ -121,18 +115,18 @@ body {
 }
 
 .article__btn {
-  font-size: 18px;
-  text-align: center;
-  font-weight: 500;
   margin: 10px;
   padding: 5px;
   width: 165px;
   height: 40px;
-  background-color: #1d30dd;
   border: none;
-  border-radius: 10px;
   color: #fff;
+  font-size: 18px;
   cursor: pointer;
+  font-weight: 500;
+  text-align: center;
+  border-radius: 10px;
+  background-color: #1d30dd;
   transition: ease-in-out 0.1s;
 }
 
@@ -150,7 +144,7 @@ body {
 }
 
 .icone:hover {
-  transform: scale(1.08);
   color: #fff;
   cursor: pointer;
+  transform: scale(1.08);
 }
