--- a/src/app/pages/cadastro/cadastro.component.css
+++ b/src/app/pages/cadastro/cadastro.component.css
@@ -1,6 +1,7 @@
 .titulo {
   font-size: 38px;
   text-align: center;
+  margin: 10px;
 }
 
 .container {
@@ -14,13 +15,14 @@
 
 .section__imagem {
   width: 580px;
-  height: 413px;
-  margin: 0 auto;
+  height: 320px;
+  margin: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #d9d9d9;
+  border-radius: 10%;
+  background-color: #ccc;
 }
 
 .imagem {
@@ -34,6 +36,28 @@
 
 .article__btn {
   padding: 5px;
+  margin: 5px;
+  width: 200px;
+  height: 40px;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  border-radius: 10px;
+  background-color: #1d30dd;
+  transition: ease-in-out 0.1s;
+}
+
+.container__btn__salvar {
+  display: flex;
+  justify-content: end;
+}
+
+.article__btn__salvar {
+  padding: 5px;
+  margin: 5px;
   width: 200px;
   height: 40px;
   border: none;
@@ -52,12 +76,17 @@
   background-color: #000f97;
 }
 
+.article__btn__salvar:hover {
+  transform: scale(1.05);
+  background-color: #000f97;
+}
+
 aside {
   margin-left: 30px;
   margin-right: 30px;
 }
 
-.user-details {
+.detalhes__form {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 12px;
@@ -69,7 +98,7 @@ aside {
   width: calc(100% / 2 - 20px);
 }
 
-.details {
+.detalhes {
   display: block;
   font-weight: 500;
   margin-bottom: 5px;
@@ -92,7 +121,13 @@ input:valid {
 }
 
 @media (max-width: 992px) {
+  .section__imagem {
+    width: 92%;
+    max-width: 95%;
+  }
+
   .container__cadastro {
+    margin: 10px;
     flex-direction: column;
   }
 }
@@ -107,12 +142,12 @@ input:valid {
     margin-bottom: 15px;
   }
 
-  .user-details {
+  .detalhes__form {
     max-height: 300px;
     overflow-y: scroll;
   }
 
-  .user-details::-webkit-scrollbar {
+  .detalhes__form::-webkit-scrollbar {
     width: 0;
   }
 }
