Campo de Descrição | Responsividade

--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -39,6 +39,15 @@
             />
           </div>
           <div class="input-box">
+            <label for="descricao" class="detalhes">Descrição: </label>
+            <input
+              type="text"
+              name="descricao"
+              placeholder="Insira uma descrição"
+              required
+            />
+          </div>
+          <div class="input-box">
             <label for="email" class="detalhes">E-mail: </label>
             <input
               type="email"
