--- a/src/app/pages/pesquisa/pesquisa.component.css
+++ b/src/app/pages/pesquisa/pesquisa.component.css
@@ -13,7 +13,7 @@ body {
   width: 100%;
   height: 60px;
   display: flex;
-  margin: 80px 0;
+  margin: 80px;
   max-width: 700px;
   padding: 10px 20px;
   border-radius: 50px;
@@ -55,9 +55,10 @@ body {
 }
 
 .card {
-  width: 580px;
+  width: 750px;
   margin: 10px;
   display: flex;
+  justify-content: space-around;
   border-radius: 20px;
   align-items: center;
   background-color: #bfbef9;
@@ -147,4 +148,39 @@ body {
   color: #fff;
   cursor: pointer;
   transform: scale(1.08);
+}
+
+@media (max-width: 768px) {
+
+  .form__pesquisa {
+    margin-left: 60px;
+    width: 650px;
+    max-width: 85%;
+  }
+
+  .card {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 80px;
+    width: 95%;
+    max-width: 96%;
+    padding: 10px;
+    background-color: #bfbef9;
+  }
+}
+
+@media (max-width: 689px) {
+  .form__pesquisa {
+    margin-left: 60px;
+    width: 550px;
+    max-width: 85%;
+  }
+}
+
+@media (max-width: 576px) {
+  .form__pesquisa {
+    margin-left: 60px;
+    width: 450px;
+    max-width: 85%;
+  }
 }
