Ajustes de Importação, Service, e Formulário

--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -27,6 +27,7 @@
             <input
               type="text"
               name="nomeCompleto"
+              formControlName="nomeCompleto"
               placeholder="Insira seu nome completo"
               required
             />
@@ -36,6 +37,7 @@
             <input
               type="text"
               name="cargo"
+              formControlName="cargo"
               placeholder="Insira seu cargo"
               required
             />
@@ -45,6 +47,7 @@
             <input
               type="text"
               name="empresa"
+              formControlName="empresa"
               placeholder="Insira sua empresa"
               required
             />
@@ -54,6 +57,7 @@
             <input
               type="text"
               name="descricao"
+              formControlName="descricao"
               placeholder="Insira uma descrição"
               required
             />
@@ -63,6 +67,7 @@
             <input
               type="email"
               name="email"
+              formControlName="email"
               placeholder="Insira seu e-mail"
               required
             />
@@ -72,6 +77,7 @@
             <input
               type="text"
               name="github"
+              formControlName="github"
               placeholder="Insira seu github"
               required
             />
@@ -81,6 +87,7 @@
             <input
               type="text"
               name="linkedin"
+              formControlName="linkedin"
               placeholder="Insira seu perfil no linkedin"
               required
             />
@@ -90,6 +97,7 @@
             <input
               type="tel"
               name="telefone"
+              formControlName="telefone"
               placeholder="Insira seu telefone"
               required
             />
