--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -1,9 +1,16 @@
-<h1 class="titulo">Cadastro de Funcionário</h1>
+<h1 class="titulo" *ngIf="!existeFuncionario">Cadastro de Funcionário</h1>
+<h1 class="titulo" *ngIf="existeFuncionario">Edite um Funcionário</h1>
+
+<div *ngIf="postEnviado" class="post-enviado">
+  <p *ngIf="existeFuncionario">Funcionário editado!</p>
+  <p *ngIf="!existeFuncionario">Funcionário cadastrado!</p>
+</div>
+
 <div class="container">
   <div class="container__cadastro">
     <section class="section__imagem">
       <img [src]="imagem" alt="Nome" class="imagem" />
-      <form class="btn">
+      <form class="btn" [formGroup]="formulario">
         <input
           type="file"
           name="imagem"
@@ -20,14 +27,15 @@
       </form>
     </section>
     <aside>
-      <form action="#">
+      <form [formGroup]="formulario" (ngSubmit)="postOuPut()" #formDir="ngForm">
         <div class="detalhes__form">
           <div class="input-box">
             <label for="nomeCompleto" class="detalhes">Nome completo: </label>
             <input
               type="text"
+              [(ngModel)]="nome"
               name="nomeCompleto"
-              formControlName="nomeCompleto"
+              formControlName="nome"
               placeholder="Insira seu nome completo"
               required
             />
@@ -37,6 +45,7 @@
             <input
               type="text"
               name="cargo"
+              [(ngModel)]="cargo"
               formControlName="cargo"
               placeholder="Insira seu cargo"
               required
@@ -47,6 +56,7 @@
             <input
               type="text"
               name="empresa"
+              [(ngModel)]="empresa"
               formControlName="empresa"
               placeholder="Insira sua empresa"
               required
@@ -57,6 +67,7 @@
             <input
               type="text"
               name="descricao"
+              [(ngModel)]="descricao"
               formControlName="descricao"
               placeholder="Insira uma descrição"
               required
@@ -67,6 +78,7 @@
             <input
               type="email"
               name="email"
+              [(ngModel)]="email"
               formControlName="email"
               placeholder="Insira seu e-mail"
               required
@@ -77,6 +89,7 @@
             <input
               type="text"
               name="github"
+              [(ngModel)]="github"
               formControlName="github"
               placeholder="Insira seu github"
               required
@@ -87,6 +100,7 @@
             <input
               type="text"
               name="linkedin"
+              [(ngModel)]="linkedin"
               formControlName="linkedin"
               placeholder="Insira seu perfil no linkedin"
               required
@@ -97,6 +111,7 @@
             <input
               type="tel"
               name="telefone"
+              [(ngModel)]="telefone"
               formControlName="telefone"
               placeholder="Insira seu telefone"
               required
