--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -1,5 +1,5 @@
-<h1 class="titulo" *ngIf="!existeFuncionario">Cadastro de Funcionário</h1>
-<h1 class="titulo" *ngIf="existeFuncionario">Edite um Funcionário</h1>
+<h1 class="titulo" >{{existeFuncionario ? "Edite um Funcionário" : "Cadastrar um Funcionário"}}</h1>
+<!-- <h1 class="titulo" *ngIf="!existeFuncionario">Edite um Funcionário</h1> -->
 
 <div *ngIf="postEnviado" class="post-enviado">
   <p *ngIf="existeFuncionario">Funcionário editado!</p>
@@ -18,6 +18,8 @@
           class="article__btn"
         />
         <input
+          href="../../../curriculos/Certificado Alura.pdf"
+          download
           type="file"
           name="curriculo"
           accept="application/msword, application/vnd.ms-excel, application/vnd.ms-powerpoint,
@@ -76,7 +78,7 @@
           <div class="input-box">
             <label for="email" class="detalhes">E-mail: </label>
             <input
-              type="email"
+              type="text"
               name="email"
               [(ngModel)]="email"
               formControlName="email"
