Testando upload de fotos

--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -14,6 +14,7 @@
         <input
           type="file"
           name="imagem"
+          (change)="printar($event)"
           accept="image/png, image/jpeg"
           class="article__btn"
         />
