--- a/src/app/pages/pesquisa/pesquisa.component.html
+++ b/src/app/pages/pesquisa/pesquisa.component.html
@@ -26,7 +26,7 @@
         <aside class="conteudo__imagem">
           <figure class="card__imagem">
             <img
-              src="../../../assets/img/foto_exemplo.jpg"
+              src="../../../../../../Desktop/projeto-evidencia-service/imagens/testando.png"
               alt=""
               class="card__img"
             />
@@ -39,7 +39,9 @@
             {{ items.descricao }}
           </p>
           <div class="informacoes">
-            <button class="article__btn">Currículo</button>
+            <a href="../../alura.pdf" download>
+              <button class="article__btn">Currículo</button>
+            </a>
             <a href="{{ 'mailto:' + items.email }}" target="_blank"
               ><i class="bx bx-envelope icone bx-md"></i
             ></a>
