--- a/src/app/pages/pesquisa/pesquisa.component.html
+++ b/src/app/pages/pesquisa/pesquisa.component.html
@@ -26,7 +26,7 @@
         <aside class="conteudo__imagem">
           <figure class="card__imagem">
             <img
-              src="../../../../../../Desktop/projeto-evidencia-service/imagens/testando.png"
+              src="../../../assets/img/foto_exemplo.png"
               alt=""
               class="card__img"
             />
