--- a/src/app/pages/cadastro/cadastro.component.css
+++ b/src/app/pages/cadastro/cadastro.component.css
@@ -36,8 +36,12 @@
   background-color: #ccc;
 }
 
-.imagem {
+.foto {
   width: 200px;
+  height: 200px;
+  min-width: 200px;
+  min-height: 200px;
+  object-fit: contain;
 }
 
 .btn {
